refactor: improve code base

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
-ENV=development
+APP_NAME=gintama
+APP_PORT=8080
+APP_RATE_LIMIT=100
 
-PORT=8000
-
-DB_CONNECTION=mysql
+DB_CONNECTION=postgres
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=example
-DB_USERNAME=root
-DB_PASSWORD=
-DB_TIMEZONE=
+DB_PORT=5432
+DB_DATABASE=your_db_name
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
+DB_TIMEZONE=Asia/Jakarta
